# YardVision

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/: main.py
src/vision/: __init__.py
src/vision/analytics/: __init__.py  events.py
src/vision/core/: __init__.py  config.py
src/vision/pipeline/: __init__.py  processor.py
src/yardvision/: __init__.py  cli.py
tests/: test_imports.py
